2004-09-11  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.c (account_changed):
	Removing the just the e-sources if the user changes the 
	account name, and not forgetting the password and 
	displaying account removal warning message.
	Fixes #64188

2004-09-11  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-gal.c (build_query):
	Added check to not to return all contacts, when user 
	tries to get the mail ID from GAL,  while composing mail,
	by perfoming empty query in "Select Contacts form Addressbook"
	dialog. Fixes #41647 
	
2004-09-11  Baris Cicek <baris@teamforce.name.tr>

	* configure.in: Added 'tr' to ALL_LINGUAS

2004-09-06  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c
	(e_book_backend_exchange_remove): Moved unused variables
	to kill warnings. 

2004-09-06  Sushma Rai  <rsushma@novell.com>

	* storage/xc-commands.c: Disabled menu options for 
	move and copy folders.  See #62440

2004-09-02  Dan Winship  <danw@novell.com>

	* lib/*: Various updates to doc comments, with a few changes to
	data structures as well, to appease gtk-doc.

2004-08-30  Dan Winship  <danw@novell.com>

	* configure.in: 1.5.94.1: brown paper bag release to sync with
	evolution 1.5.94.1

2004-08-29  Hasbullah Bin Pit <sebol@my-penguin.org>

        * configure.in: Added "ms" to ALL_LINGUAS.

2004-08-27  Dan Winship  <danw@novell.com>

	* configure.in: version 1.5.94

	* NEWS: Update

2004-08-27  Dan Winship  <danw@novell.com>

	* lib/e2k-context.c (e2k_soup_message_new,
	e2k_soup_message_new_full, e2k_context_queue_message,
	e2k_context_send_message): Remove anachronisms from the docs
	(e2k_context_put_new): s/POST/PUT/ in docs.
	(e2k_context_bproppatch_start): define BPROPPATCH
	
2004-08-27  Dan Winship  <danw@novell.com>

	* lib/e2k-global-catalog.c (e2k_global_catalog_reconnect): Hm,
	remove this. It's not The Right Thing any more.

	* addressbook/e-book-backend-gal.c (gal_reconnect): Use