@@ -1,3 +1,9 @@
+2004-09-14  Sushma Rai  <rsushma@novell.com>
+
+	* storage/exchange-hierarchy-favorites.c 
+	(exchange_hierarchy_favorites_add_folder): Checking for 
+	permanent_uri being NULL. Fixes #65850
+
 2004-09-11  Sushma Rai  <rsushma@novell.com>
 
 	* storage/exchange-config-listener.c (account_changed):
